2006-07-03 21:35  n1xt3r

	* default/plugins/: test.off, test.sh: Disabled test plugin for
	  users plugins.

2006-07-03 21:30  n1xt3r

	* default/plugins/test.sh: Added sample test.sh plugin for users
	  plugin.

2006-07-03 21:24  n1xt3r

	* default/plugins/dummy: [no log message]

2006-07-03 21:24  n1xt3r

	* default/plugins/dummy: Updating default weblog's directory tree.

2006-07-03 19:31  n1xt3r

	* docs/nanoblogger.html, lib/config.sh: - Fix SHOW_INDEXFILE.  -
	  Corrected some minor info in user manual.

2006-07-03 18:38  n1xt3r

	* ChangeLog: - Update Changelog.  - Version change to 3.3 RC5.

2006-07-03 18:09  n1xt3r

	* README, nb, default/blog.conf, docs/nanoblogger.html,
	  lib/config.sh: Added plugins directory to the default weblog's
	  directory.

2006-07-03 17:36  n1xt3r

	* nb, default/blog.conf, docs/nanoblogger.html: Update user manual
	  with user plugins and category plugins information.

2006-07-03 14:57  n1xt3r

	* README, nb, default/blog.conf, docs/nanoblogger.html,
	  lib/config.sh: Added support for user plugins directory.

2006-07-03 12:26  n1xt3r

	* README, plugins/atom.sh, plugins/rss.sh, plugins/rss2.sh: -
	  Syndication plugins only update on changes or forced updates
	  (e.g. -u all).  - Updated upgrade instructions in README.

2006-07-02 23:35  n1xt3r

	* README, default/blog.conf, docs/nanoblogger.html: README with
	  release notes.

2006-07-02 14:27  n1xt3r

	* TODO, nb, default/blog.conf, lib/config.sh: - Automatic detection
	  of locale used for dates.  - Added preliminary support for
	  category plugins.

2006-06-08 03:53  n1xt3r

	* default/blog.conf, docs/nanoblogger.html, lib/config.sh: -
	  Manually setting NB_INDEX from blog.conf, is no longer necessary.
	  - New config variable SHOW_INDEXFILE handles display of
	  directory index   files in links.

2006-06-02 21:43  n1xt3r

	* nb, docs/nanoblogger.html, lib/config.sh, plugins/atom.sh,
	  plugins/rss.sh, plugins/rss2.sh, plugins/zyx_articles_meta.sh,